--- a/programador-frontend/public/index.html
+++ b/programador-frontend/public/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
@@ -16,7 +17,8 @@
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet">
   <!-- <script src="sweetalert2.all.min.js"></script>   -->
   <meta />
-
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6517514730279743"
+    crossorigin="anonymous"></script>
   <title>Programador de cursos</title>
 </head>
 
